--- a/index.html
+++ b/index.html
@@ -7,6 +7,14 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="home/downloads/cat-and-kitten-snuggling.jpg" />
+    <img 
+    src="https://www.google.com/imgres?q=kitten%20cat&imgurl=https%3A%2F%2Fwww.vets4pets.com%2Fsiteassets%2Fspecies%2Fcat%2Fkitten%2Fcat-and-kitten-snuggling.jpg%3Fw%3D585%26scale%3Ddown&imgrefurl=https%3A%2F%2Fwww.vets4pets.com%2Fpet-health-advice%2Fcat-advice%2Fkitten%2Fintroducing-kittens-to-adult-cats%2F&docid=QSULOIo7iRlIPM&tbnid=Txr6w9Hy1_uy0M&vet=12ahUKEwjkuZz_r9mGAxWwRvEDHaJtCUkQM3oECBwQAA..i&w=3200&h=1800&hcb=2&ved=2ahUKEwjkuZz_r9mGAxWwRvEDHaJtCUkQM3oECBwQAA#imgrc=Txr6w9Hy1_uy0M&imgdii=KXypj4InB9QEAM"
+    alt="twins kittens"/>
+    <img
+    src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.redbubble.com%2Fi%2Fsticker%2FCute-anime-cat-kawaii-kitten-by-Bellepeach%2F144578683.EJUG5&psig=AOvVaw3tIVE6UZYGL3qyaXGtbf2g&ust=1718396059134000&source=images&cd=vfe&opi=89978449&ved=0CBAQjRxqFwoTCPiq-aey2YYDFQAAAAAdAAAAABAE"
+    alt="anime kitty"
+    title="bubbles of serotonin"
+    />
   </body>
 </html>
